NavBar issue on Mobile when opening and closing

--- a/src/main/resources/gwt/material/demo/errai/client/resources/css/app.css
+++ b/src/main/resources/gwt/material/demo/errai/client/resources/css/app.css
@@ -1,19 +1,24 @@
 html {
     background-color: #e9e9e9;
 }
+
 body {
     overflow: auto !important;
 }
+
 /** Header **/
 header nav .button-collapse i {
     font-size: 1.5rem;
 }
+
 header nav ul {
     float: right;
 }
+
 [data-title="Picture"] {
     width: 60px;
 }
+
 .titlePanel {
     width: 100%;
     margin-top: 64px;
@@ -21,19 +26,23 @@ header nav ul {
     padding: 80px;
     padding-top: 40px;
 }
+
 /** Sidenav **/
 .side-nav li.active a span, .side-nav li.active a i {
     color: #000;
 }
+
 .side-nav li.active, .side-nav li:hover {
     background-color: #F5F5F5;
 }
+
 /** Main **/
 main {
     margin-top: -40px;
     padding-left: 80px;
     padding-right: 80px;
 }
+
 /** Code **/
 .code {
     position: relative;
@@ -42,10 +51,12 @@ main {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     margin-bottom: 20px;
 }
+
 .code blockquote {
     font-size: 0.9em;
 }
-.code .lang{
+
+.code .lang {
     background: #9a9a9a;
     display: inline;
     float: left;
@@ -53,11 +64,13 @@ main {
     padding-right: 20px;
     color: white;
 }
+
 .code i.code {
     position: absolute;
     right: 20px;
     top: 10px;
 }
+
 .code pre {
     background: #f2f2f2;
     max-height: 0px;
@@ -78,10 +91,12 @@ main {
     .code {
         margin: 12px;
     }
+
     .titlePanel {
         margin-top: 56px;
     }
 }
+
 /* Tablets and up */
 @media screen and (min-width: 768px) {
 
@@ -97,4 +112,10 @@ main {
 
 .titlePanel .chip {
     cursor: pointer;
+}
+
+@media only screen and (max-width: 992px) {
+    nav.navbar-fixed {
+        width: 100% !important;
+    }
 }
